2002-03-05  Scott S. Goodwin  <scott@scottg.net>

	* all: ran *.c and *.h through indent: indent -i2 -br -brs -ce
	-hnl -psl -sob <filename.c>.

2002-03-04  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c, nsopenssl.c, nsopenssl.h, tclcmds.c: Added 'ns_openssl
	module name' and 'ns_openssl module port' commands. The first
	tells you what the name of the loaded module is for the current
	connection (you may have more than one copy of nsopenssl
	loaded). The second tells you which port your current connection's
	nsopenssl driver is listening on. This would allow you to do
	access control by determining what module name and or module port
	the connection is coming through.

2002-02-18  Scott S. Goodwin  <scott@scottg.net>

	* tclcmds.c: added ns_openssl port command. It returns the
	scPtr->port value, which happens to be the local port the conn is
	using, not the port the server is listening on. I need to do a
	query on the port the server is listening on by grabbing the port
	number from the nsd.tcl based on the module name (as you may have
	multiple instances of nsopenssl up and running).

2002-02-15  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: I was decrementing towrite by rc bytes. Problem is that
	if rc < 0 which it will be on SSL_write error, towrite will get
	bigger. This was a late night error. The #if'd out debug portion
	worked properly. Adam Zell pointed this out.

	* dumb: The previous two changes were made once before. The
	tclcmd.c fix reverted when I received a fix for some other problem
	in tclcmd.c; I neglected to do a diff between my copy and the
	fixed one that was sent to me. In the case of init.c, I'm
	uncertain how that creeped back in. Thanks to Adam Zell for
	pointing these out. Lessons learned: Always commit your changes
	right after your tests work. Always diff a file sent to you
	against your current working copy from the repository. There may
	be changes you made to your file that aren't in the contributed
	file.
