@@ -86,67 +86,57 @@
 struct Ns_OpenSSLConn;
 
 typedef struct NsOpenSSLDriver {
-
     struct NsOpenSSLDriver *nextPtr;
     struct Ns_OpenSSLConn *firstFreePtr;
-
+    Ns_Driver driver;
     Ns_Mutex lock;
     int refcnt;
-    Ns_Driver driver;
 
-    char *server;		/* Server name */
-    char *module;		/* Module name */
-    char *configPath;		/* E.g. ns/server/s1/module/nsopenssl */
-    char *dir;			/* Module directory (on disk) */
-
-    char *location;		/* E.g. https://example.com:8443 */
-    char *address;		/* Advertised address */
-    char *bindaddr;		/* Bind address - might be 0.0.0.0 */
-    int port;			/* Bind port */
-
-    int bufsize;
-    int timeout;
-    SOCKET lsock;
+    char    *server;		/* Server name */
+    char    *module;		/* Module name */
+    char    *configPath;	/* E.g. ns/server/s1/module/nsopenssl */
+    char    *dir;			/* Module directory (on disk) */
+    char    *location;		/* E.g. https://example.com:8443 */
+    char    *address;		/* Advertised address */
+    char    *bindaddr;		/* Bind address - might be 0.0.0.0 */
+    int      port;			/* Bind port */
+    int      bufsize;
+    int      timeout;
 
     SSL_CTX *context;		/* XXX change to nsdServerContext */
     SSL_CTX *sockClientContext;
     SSL_CTX *sockServerContext;
-
-    char *randomFile;		/* Used to seed PRNG */
-
+    
+    SOCKET   lsock;
+    char    *randomFile;	/* Used to seed PRNG */
 } NsOpenSSLDriver;
 
 typedef struct Ns_OpenSSLConn {
-
+	/* These are NOT to be freed by NsOpenSSLDestroyConn */
     char *server;		/* Server name */
     char *module;		/* Module name (e.g. 'nsopenssl') */
-    char *configPath;		/* Path to the configuration file */
+    char *configPath;	/* Path to the configuration file */
     char *dir;			/* Module directory (on disk) */
-
-    int refcnt;			/* Don't free if refcnt > 0 */
-
-    int role;			/* client or server */
-    int conntype;		/* nsd server, sock server or client server conn */
-    char *type;			/* 'nsdserver', 'sockserver', sockclient' */
-
-    int bufsize;
-    int timeout;
-
-    SOCKET sock;
-    SOCKET wsock;
-
-    SSL_CTX *context;		/* Read-only context for creating SSL structs */
-    SSL *ssl;
-    BIO *io;			/* All SSL i/o goes through this BIO */
-    X509 *peercert;		/* Certificate for peer, may be NULL if no cert */
-
-    char peer[16];		/* Not used by nsd server conns in 4.x API */
-    int port;			/* Not used by nsd server conns in 4.x API */
-
+    char *location;		/* E.g. https://example.com:8443 */
     char *address;		/* Advertised address for this module instance */
     char *bindaddr;		/* Bind address for this module instance - might be 0.0.0.0 */
-    int bindport;		/* The port the server is listening on for this module instance */
-
+    int   port;			/* The port the server is listening on for this module instance */
+    int   bufsize;
+    int   timeout;
+        
+    /* These must be freed by NsOpenSSLDestroyConn */
+    int      refcnt;			/* Don't destroy struct if refcnt > 0 (see CreateTclChannel in tclcmds.c) */
+    int      role;			/* client or server */
+    int      conntype;		/* nsd server, sock server or client server conn */
+    char    *type;			/* 'nsdserver', 'sockserver', sockclient' */
+    SOCKET   sock;
+    SOCKET   wsock;
+    SSL_CTX *context;		/* Read-only context for creating SSL structs */
+    SSL     *ssl;
+    BIO     *io;			/* All SSL i/o goes through this BIO */
+    X509    *peercert;		/* Certificate for peer, may be NULL if no cert */
+    char     peer[16];		/* Not used by nsd server conns in 4.x API */
+    int      peerport;		/* Not used by nsd server conns in 4.x API */
 #ifndef NS_MAJOR_VERSION
     struct Ns_OpenSSLConn *nextPtr;
     struct NsOpenSSLDriver *sdPtr;
